# table_wrapper

./: .gitignore  LICENSE.txt  pyproject.toml  readme.md  table.py
tb/: __init__.py  table.py  util.py
